# repodoc

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  configure.ac  docman  repodoc
extras/: Makefile  Makefile.am  check-utf8  check-utf8.c  xpatheval.c
frontend/: Makefile.am  default  gtk  list
lib/: Makefile.am  boundary.sh  colors.sh  docpath.sh  frontend_core.sh  get-date.sed  get-version.sed  libcore.sh  massagelinenumbers.sed  stripxmlcomments.sed  trimtree.awk  xml.sh  xpath.sh
modules/: Makefile.am  banned.module  dyn-meta.module  header.module  lang.module  langlinks.module  length.module  links.module  path.module  trans.module  up2date.module  utf8.module  version.module  xml.module
modules/docman/: Makefile.am  bump.module  get.module  patch.module  sync.module
modules/repodoc/: Makefile.am  banned.module  dyn-meta.module  header.module  lang.module  langlinks.module  length.module  links.module  metalinks.module  path.module  trans.module  up2date.module  utf8.module  version.module  xml.module
mono/: Makefile  Makefile.am  repo_front.cs
mono/Repodoc/: Document.cs  Makefile.am  Parser.cs
mono/repo_front/: Makefile.am  docs_tree_view.cs  parser.cs  repo_front.cs
t/: Makefile  Makefile.am  t00000-test-the-testsuite.bash  t10000-docpath.bash  t10001-stripxmlcomments.bash  t10002-massagelinenumbers.bash  t10003-anchor2xpath.bash  t10004-get-xmltree.bash  t20000-banned.bash  t20001-length.bash  t20002-header.bash  t20003-xml.bash  t20004-utf8.bash  test-lib.bash  test-module-lib.bash
t/t10004/: Makefile.am  expected  input.xml
t/t20000/: Makefile.am  correct  patterns  simple-bad-end  simple-bad-in  simple-bad-start  simple-good  special  tab  trailingwhitespaces
t/t20001/: Makefile.am  guides  ignore-header  long-links1  long-links2  malformed-links1  malformed-links2  one-long-line  simple-short-lines  skip-just-one-pre-block  skip-pre-blocks  titles
t/t20002/: Makefile.am  header  malformed-header1  malformed-header2  malformed-header3  no-header
t/t20003/: Makefile.am  malformed.xml  wellformed.xml
t/t20004/: Makefile.am  correct  wrong
