CLEANFILES = *~
MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = .

REPOMODS = banned.module     \
		   lang.module       \
		   links.module      \
		   trans.module      \
		   version.module    \
		   dyn-meta.module   \
		   langlinks.module  \
		   metalinks.module  \
		   up2date.module    \
		   xml.module        \
		   header.module     \
		   length.module     \
		   path.module       \
		   utf8.module

EXTRA_DIST = $(REPOMODS)

repomodsdir = $(pkgdatadir)/modules/repodoc
repomods_DATA = $(REPOMODS)
