CLEANFILES = *~
MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = .

EXTRA_DIST = long-links1             \
			 malformed-links2        \
			 skip-just-one-pre-block \
			 guides                  \
			 long-links2             \
			 one-long-line           \
			 skip-pre-blocks         \
			 ignore-header           \
			 malformed-links1        \
			 simple-short-lines      \
			 titles
